# simple-spin-lock

./: .gitignore  CMakeLists.txt  README.md  scons_lib.bat  scons_lib.sh
src/cxx/demo/: CMakeLists.txt  main.cpp  main.hpp
src/cxx/slock/: CMakeLists.txt  SConstruct
src/cxx/slock/private/: Mutex.cpp  SpinLock.cpp  StateMutex.cpp  slock.cpp
src/cxx/slock/public/: Mutex.hpp  SpinLock.hpp  StateMutex.hpp  slock.hpp
